examples/neg/high_loop_no_grow/bob.oio
BOB

network channel ALICE/A2@{H} : int@{H};
local channel STDOUT: int@{H};

var bobs_secret : int@{H} = 0;

START@{} (i : int@{}) {
    send(ALICE/A2, bobs_secret);
}

B2@{H} (secret : int@{H}) {
    output(STDOUT, secret);
    send(ALICE/A2, secret);
}
